2014-11-27  Ben Finney  <ben+python@benfinney.id.au

    * Use ‘pydoc.splitdoc’ to get package description text.

2014-08-05  Ben Finney  <ben+python@benfinney.id.au>

    * Update package homepage to Alioth hosted project page.

2014-08-01  Ben Finney  <ben+python@benfinney.id.au>

    * Ensure a ‘basestring’ name bound to the base type for strings.
      This is to allow checks to work on Python 2 and 3.
    * Specify versions of Python supported, as trove classifiers.

2014-05-20  Ben Finney  <ben+python@benfinney.id.au>

    * Update copyright notices.
    * Add editor hints for most files.
    * Distinguish continuation-line indentation versus block indentation.

2012-05-30  Ben Finney  <ben+python@benfinney.id.au>

    * Use unicode literals by default, specifying bytes where necessary.
      This is to ease the port to Python 3, where the default string type
      is unicode.
    * Update copyright notices.
    * Update the GPL license file to version 3, as declared in our
      copyright notices.

2011-07-02  Ben Finney  <ben+python@benfinney.id.au>

    * Change license of library code to Apache License 2.0. Rationale at
      <URL:http://wiki.python.org/moin/PythonSoftwareFoundationLicenseFaq#Contributing_Code_to_Python>.

2010-04-10  Ben Finney  <ben+python@benfinney.id.au>

    * FAQ: Add some entries and re-structure the document.

2010-03-09  Ben Finney  <ben+python@benfinney.id.au>

    * Use ‘unicode’ data type for all text values.
    * Prepare for Python 3 upgrade by tweaking some names and imports.

2010-03-03  Ben Finney  <ben+python@benfinney.id.au>

    * MANIFEST.in: Include the documentation in the distribution.

2010-03-02  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.5.5 released.

    * Stop using ‘pkg_resources’ and revert to pre-1.5.3 version-string
      handling, until a better way that doesn't break everyone else's
      installation can be found.

2010-02-27  Ben Finney  <ben+python@benfinney.id.au>
