@@ -1,5 +1,5 @@
 ./dist
 ./build
 *.egg-info
-./daemon/version/version_info.py
+./daemon/_version_info.py
 .coverage
