@@ -81,18 +81,22 @@ def update_version_info_module_if_needed(module_path):
 
 package_name = "daemon"
 version_info_module_relpath = os.path.join(
-        package_name, "version", "version_info.py")
+        package_name, "_version_info.py")
 version_info_module_path = os.path.join(
         workingtree.basedir, version_info_module_relpath)
 
 update_version_info_module_if_needed(version_info_module_path)
 
-package_module = __import__(package_name, fromlist=[b'version'])
-version_module = package_module.version
-version = version_module.version
+package_module = __import__(package_name, fromlist=[b'_metadata'])
+metadata = package_module._metadata
 
 
-export_dir_name = "%(dist_name)s-%(version)s" % vars()
+version_string_filename = "VERSION"
+version_string_file = open(
+        os.path.join(workingtree.basedir, version_string_filename), 'r')
+version_string = version_string_file.read().strip()
+
+export_dir_name = "%(dist_name)s-%(version_string)s" % vars()
 export_root_dir = tempfile.mkdtemp()
 export_dir_path = os.path.join(export_root_dir, export_dir_name)
 bzrlib.export.export(revision_tree, export_dir_path, format="dir")
