@@ -16,6 +16,8 @@
 
 from __future__ import unicode_literals
 
+import os
+import os.path
 import pydoc
 
 from setuptools import setup, find_packages
@@ -23,16 +25,22 @@ from setuptools import setup, find_packages
 
 distribution_name = "python-daemon"
 main_module_name = 'daemon'
-main_module = __import__(main_module_name, fromlist=[b'version'])
-version = main_module.version
+main_module = __import__(main_module_name, fromlist=[b'_metadata'])
+metadata = main_module._metadata
 
 synopsis, long_description = pydoc.splitdoc(
         pydoc.getdoc(main_module))
 
+setup_dir = os.path.dirname(__file__)
+version_string_filename = "VERSION"
+version_string_file = open(
+        os.path.join(setup_dir, version_string_filename), 'r')
+version_string = version_string_file.read().strip()
+
 
 setup(
         name=distribution_name,
-        version=version.version,
+        version=version_string,
         packages=find_packages(exclude=["test"]),
 
         # Setuptools metadata.
@@ -47,12 +55,12 @@ setup(
             ],
 
         # PyPI metadata.
-        author=version.author_name,
-        author_email=version.author_email,
+        author=metadata.author_name,
+        author_email=metadata.author_email,
         description=synopsis,
-        license=version.license,
+        license=metadata.license,
         keywords="daemon fork unix".split(),
-        url=main_module._url,
+        url=metadata.url,
         long_description=long_description,
         classifiers=[
             # Reference: http://pypi.python.org/pypi?%3Aaction=list_classifiers
